--- a/backend/employee-management-system/src/main/resources/application.properties
+++ b/backend/employee-management-system/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=employee-management-system
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ems_db
+spring.datasource.username=root
+spring.datasource.password=admin
+
+#hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+
+spring.main.allow-circular-references=true
