--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "chart.js": "^4.5.1",
+    "formik": "^2.4.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.30.2"
+    "react-router-dom": "^6.30.2",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.1",
