forgot password functionality

--- a/backend/employee-management-system/src/main/resources/application.properties
+++ b/backend/employee-management-system/src/main/resources/application.properties
@@ -9,3 +9,10 @@ spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
 
 spring.main.allow-circular-references=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=d.amit.24@gmail.com
+spring.mail.password=vfve rhht ejwg kabe
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
