--- a/backend/employee-management-system/src/main/resources/application.properties
+++ b/backend/employee-management-system/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=employee-management-system
 
+server.port=8000
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ems_db
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
 
 #hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
