--- a/backend/employee-management-system/src/main/resources/application.properties
+++ b/backend/employee-management-system/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.application.name=employee-management-system
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/ems_db
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=root
+
+server.port=8000
 
 #hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
